// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Pulse Active 1`] = `
<div
  className="css-7t31x2-Pulse ea0y28j0"
>
  <div
    className="css-fb7v6f-PulseWrapper ea0y28j1"
  >
    <div
      className="css-ygm0j6-PulseTransitions ea0y28j3"
      type="one"
    />
    <div
      className="css-1lz6m7f-PulseTransitions ea0y28j3"
      type="two"
    />
    <div
      className="css-1ym69e3-PulseContainer ea0y28j2"
    >
      <img
        alt="roundLogo"
        height="50px"
        src="https://i.ibb.co/MVLDD4K/angular.png"
        width="50px"
      />
    </div>
  </div>
  <div
    className="css-1vhvsri-PulseProgress ea0y28j5"
  >
    100%
  </div>
</div>
`;

exports[`Storyshots Atoms/Pulse Basic 1`] = `
<div
  className="css-7t31x2-Pulse ea0y28j0"
>
  <div
    className="css-fb7v6f-PulseWrapper ea0y28j1"
  >
    <div
      className="css-1ym69e3-PulseContainer ea0y28j2"
    >
      <img
        alt="roundLogo"
        height="50px"
        src="https://i.ibb.co/MVLDD4K/angular.png"
        width="50px"
      />
    </div>
  </div>
  <div
    className="css-1vhvsri-PulseProgress ea0y28j5"
  >
    100%
  </div>
</div>
`;

exports[`Storyshots Atoms/Pulse Bloqued 1`] = `
<div
  className="css-7t31x2-Pulse ea0y28j0"
>
  <div
    className="css-fb7v6f-PulseWrapper ea0y28j1"
  >
    <div
      className="css-bixwne-PulseContainer ea0y28j2"
    >
      <img
        alt="roundLogo"
        height="50px"
        src="https://i.ibb.co/MVLDD4K/angular.png"
        width="50px"
      />
    </div>
    <div
      className="css-bra9rf-PulseLock ea0y28j4"
    >
      <i
        className="css-6tw2qr-IconWrapper e1cr9qb30"
      >
        <svg
          fill=""
          height="30px"
          viewBox="0 0 512 512"
          width="30px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <g>
              <g>
                <g
                  id="XMLID_3037_"
                >
                  <g
                    id="XMLID_3038_"
                  >
                    <g
                      id="XMLID_3039_"
                    >
                      <g
                        id="XMLID_3040_"
                      >
                        <g
                          id="XMLID_3041_"
                        >
                          <g
                            id="XMLID_3042_"
                          >
                            <g
                              id="XMLID_3043_"
                            >
                              <g
                                id="XMLID_3045_"
                              >
                                <g
                                  id="XMLID_3046_"
                                >
                                  <g
                                    id="XMLID_3047_"
                                  >
                                    <g
                                      id="XMLID_3048_"
                                    >
                                      <g
                                        id="XMLID_3049_"
                                      >
                                        <g
                                          id="XMLID_3050_"
                                        >
                                          <g
                                            id="XMLID_3051_"
                                          >
                                            <g
                                              id="XMLID_3072_"
                                            >
                                              <circle
                                                cx="256"
                                                cy="256"
                                                fill="#4f4359"
                                                r="256"
                                              />
                                            </g>
                                          </g>
                                        </g>
                                      </g>
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
            <path
              d="m511.98 257.604-125.738-125.737-254.376 254.376 125.737 125.737c140.11-.862 253.515-114.266 254.377-254.376z"
              fill="#372a44"
            />
            <g>
              <g>
                <g>
                  <g
                    id="XMLID_2899_"
                  >
                    <g
                      id="XMLID_2900_"
                    >
                      <g
                        id="XMLID_2916_"
                      >
                        <g
                          id="XMLID_2917_"
                        >
                          <g
                            id="XMLID_2947_"
                          >
                            <g
                              id="XMLID_2949_"
                            >
                              <g
                                id="XMLID_2950_"
                              >
                                <g
                                  id="XMLID_2952_"
                                >
                                  <g
                                    id="XMLID_2953_"
                                  >
                                    <g
                                      id="XMLID_2954_"
                                    >
                                      <g
                                        id="XMLID_2955_"
                                      >
                                        <g
                                          id="XMLID_2956_"
                                        >
                                          <g
                                            id="XMLID_2957_"
                                          >
                                            <g
                                              id="XMLID_2988_"
                                            >
                                              <g
                                                id="XMLID_3006_"
                                              >
                                                <circle
                                                  cx="255.999"
                                                  cy="256"
                                                  fill="#fed940"
                                                  r="179.923"
                                                />
                                              </g>
                                            </g>
                                          </g>
                                        </g>
                                      </g>
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
              <g>
                <g>
                  <g
                    id="XMLID_2832_"
                  >
                    <g
                      id="XMLID_2833_"
                    >
                      <g
                        id="XMLID_2834_"
                      >
                        <g
                          id="XMLID_2835_"
                        >
                          <g
                            id="XMLID_2836_"
                          >
                            <g
                              id="XMLID_2837_"
                            >
                              <g
                                id="XMLID_2853_"
                              >
                                <g
                                  id="XMLID_2869_"
                                >
                                  <g
                                    id="XMLID_2870_"
                                  >
                                    <g
                                      id="XMLID_2871_"
                                    >
                                      <g
                                        id="XMLID_2872_"
                                      >
                                        <g
                                          id="XMLID_2888_"
                                        >
                                          <g
                                            id="XMLID_2889_"
                                          >
                                            <g
                                              id="XMLID_2890_"
                                            >
                                              <g>
                                                <path
                                                  d="m435.923 256c0 99.367-80.557 179.924-179.924 179.924v-359.848c99.368 0 179.924 80.557 179.924 179.924z"
                                                  fill="#ffc024"
                                                />
                                              </g>
                                            </g>
                                          </g>
                                        </g>
                                      </g>
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
              <path
                d="m344.61 328.63-30.41 17.45c-12.64-18.67-34.01-30.95-58.2-30.95s-45.56 12.28-58.2 30.95l-30.41-17.45c18.74-29.15 51.46-48.5 88.61-48.5s69.87 19.35 88.61 48.5z"
                fill="#7f6866"
              />
              <path
                d="m344.61 328.63-30.41 17.45c-12.64-18.67-34.01-30.95-58.2-30.95v-35c37.15 0 69.87 19.35 88.61 48.5z"
                fill="#634c4c"
              />
              <g>
                <g>
                  <path
                    d="m165.85 250.121c-10.439 0-20.867-1.956-30.646-5.843l11.08-27.879c23.017 9.145 48.938 1.314 63.036-19.054l24.668 17.074c-10.623 15.347-26.314 26.772-44.18 32.174-7.794 2.356-15.88 3.528-23.958 3.528z"
                    fill="#7f6866"
                  />
                </g>
                <g>
                  <path
                    d="m346.148 250.121c-8.079 0-16.163-1.172-23.958-3.527-17.865-5.401-33.556-16.827-44.179-32.174l24.668-17.074c14.097 20.365 40.018 28.202 63.035 19.054l11.08 27.879c-9.777 3.885-20.207 5.842-30.646 5.842z"
                    fill="#634c4c"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
      </i>
    </div>
  </div>
  <div
    className="css-1vhvsri-PulseProgress ea0y28j5"
  >
    100%
  </div>
</div>
`;
